# referral_service

./: Diagram1.dia  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
authentication/: models.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
referal_service/: asgi.py  settings.py  urls.py  wsgi.py
service/: models.py  serializers.py  urls.py  utils.py  views.py
service/migrations/: 0001_initial.py  0002_alter_referralcode_code_referrer_and_more.py  0003_referrer_created_at.py
utils/: utils.py
